--- a/README
+++ b/README
@@ -5,4 +5,5 @@
 onbetaalbare sociale woningvoorziening
 bijstandsuitkering
 inschrijving in de gemeente maastricht
-hilton
+leger des heils
+hilton beatrixhaven
