--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 ----------------------------------
 
 onbetaalbare sociale woningvoorziening
-bijstandsuitkering
+voor burgers met een bijstandsuitkering
 inschrijving in de gemeente maastricht
 leger des heils
 hilton beatrixhaven
